# llm-chess

./: pyproject.toml
notebooks/: main.ipynb
notebooks/tiny_chess_gpt2_uci/checkpoint-1950/: generation_config.json  rng_state.pth  scheduler.pt  trainer_state.json
notebooks/tiny_chess_gpt2_uci/checkpoint-2000/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
