[project]
name = "notebook-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "chess>=1.11.2",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.3",
]
